--- a/src/app/cocteil-dashboard/cocteil-dashboard.component.html
+++ b/src/app/cocteil-dashboard/cocteil-dashboard.component.html
@@ -1,18 +1,22 @@
-<div id="allCocteil">
-
-
-    <div  *ngFor="let cocteils of allCocteils"  [routerLink]="['/detail', cocteils?.name_of_cocteil]">
-
-      <div id="smallView">
-        <div *ngIf="cocteils?.name_of_cocteil" id="smallIcon">
-          <img id="image" src="../../images/{{cocteils?.name_of_cocteil}}.png" onError="this.src='../../images/Американо.png'">
-        </div>
-        <div id="smallViewName">
-          <p>{{cocteils?.name_of_cocteil}}</p>
+<div id="dashboard">
+  <div id="allCocteil">
+      <div  *ngFor="let cocteils of showCocteils"  [routerLink]="['/detail', cocteils?.name_of_cocteil]">
+        <div id="smallView">
+          <div *ngIf="cocteils?.name_of_cocteil" id="smallIcon">
+            <img id="image" src="../../images/{{cocteils?.name_of_cocteil}}.png" onError="this.src='../../images/Американо.png'">
+          </div>
+          <div id="smallViewName">
+            <p>{{cocteils?.name_of_cocteil}}</p>
+          </div>
         </div>
       </div>
+  </div>
 
+  <div id="navigationDiv">
+    <div id="battonsDiv">
+      <div class="button"  *ngFor="let number of numbers" (click)="getShowCocteils(number)">
+        <p>{{number}}</p>
+      </div>
     </div>
-
-
+  </div>
 </div>
