--- a/src/app/cocteil-dashboard/cocteil-dashboard.component.css
+++ b/src/app/cocteil-dashboard/cocteil-dashboard.component.css
@@ -1,11 +1,18 @@
+#dashboard{
+  width: 100%;
+  height: 85vh;
+  margin-top: 1vh;
+}
+
 #smallView {
-  width: 11vw;
-  height: 16vh;
+  width: 24vw;
+  height: 37vh;
   background-color: whitesmoke;
   float: left;
   margin-left: 1%;
   margin-bottom: 1%;
   opacity: 0.3;
+  cursor: pointer;
 }
 
 #smallView:hover {
@@ -14,20 +21,22 @@
 }
 
 #allCocteil{
-  width: 100%;
-  height: 55%;
-  margin-top: 1%;
+  width: 76%;
+  height: 90%;
+  margin-left: 12%;
 }
 
 #smallIcon{
   height: 80%;
   width: auto;
+  margin-top: 5%;
 }
 
 #smallViewName{
   width: auto;
   height: auto;
   text-align: center;
+  margin-top: 5%;
 }
 
 p {
@@ -37,6 +46,7 @@ p {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+
 }
 
 #image{
@@ -44,4 +54,30 @@ p {
   width: auto;
   margin: 0 auto;
   display: block;
+}
+
+#navigationDiv{
+  width: 100%;
+  height: 5%;
+}
+
+#battonsDiv{
+  width: 8%;
+  height: 70%;
+  margin: 0 auto;
+}
+
+.button{
+  width: 1.5vw;
+  height: 2.5vh;
+  background-color: #f5f5f5;
+  float: left;
+  margin-left: 0.4vw;
+  cursor: pointer;
+  text-align: center;
+  opacity: 0.3;
+}
+
+.button:hover{
+  opacity: 1;
 }
