--- a/src/app/favoriteCocteils/favoriteCocteils.html
+++ b/src/app/favoriteCocteils/favoriteCocteils.html
@@ -4,15 +4,17 @@
     <h1> Вам не понравился ни один коктейль</h1>
   </div>
 
-  <div *ngFor="let cocteils of usersCocteils"  [routerLink]="['/detail', cocteils]">
-    <div id="smallView">
-      <div *ngIf="cocteils" id="smallIcon">
-        <img id="image" src="../../images/{{cocteils}}.png">
-      </div>
-      <div id="smallViewName">
-        <p>{{cocteils}}</p>
+  <!--<div>
+    <div *ngFor="let cocteils of usersCocteils"  [routerLink]="['/detail', cocteils]">
+      <div id="smallView">
+        <div *ngIf="cocteils" id="smallIcon">
+          <img id="image" src="../../images/{{cocteils}}.png">
+        </div>
+        <div id="smallViewName">
+          <p>{{cocteils}}</p>
+        </div>
       </div>
     </div>
-  </div>
+  </div>-->
 
 </div>
