--- a/src/app/favoriteCocteils/favoriteCocteils.html
+++ b/src/app/favoriteCocteils/favoriteCocteils.html
@@ -1,6 +1,6 @@
 <div id="allCocteil">
 
-  <div *ngIf="usersCocteilsIsEmpty" id="message" >
+  <div *ngIf="userCocteilsIsEmpty" id="message" >
     <h1> Вам не понравился ни один коктейль</h1>
   </div>
 
