--- a/src/app/cocteilNotFaunded/cocteilNotFaunded.html
+++ b/src/app/cocteilNotFaunded/cocteilNotFaunded.html
@@ -1,8 +1,7 @@
-<div id="cocteilNotFound">
+<div>
   <h1>Коктель не найден</h1>
 </div>
-<div id="cocteilNotFoundBatton">
-  <button class="CocteilBatton" (click)="homePage();">
-    <p class="textForBatton">Вернуться на главную</p>
-  </button>
+
+<div class="cocteilNotFoundBatton" (click)="homePage();">
+  <p class="textForBatton">Вернуться на главную</p>
 </div>
