--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,76 +1,247 @@
-#table{
-  height: 100vh;
-  width: 100%;
+.navigationBatton{
+  display: none;
 }
 
-#logoConteiner{
-  width: auto;
-  height: 6%;
-  margin-top: 0%;
-}
-
-#logo{
+.logo{
   font-size: 5vh;
   color: whitesmoke;
   font-family: Algerian;
   text-align: center;
   vertical-align: middle;
-  margin-bottom: 0%;
-  margin-top: 0%;
+  margin: 0;
   cursor: default;
   user-select: none;
 }
 
-#navigationDiv {
-  width:100%;
-  height: 5%;
+nav{
+  height: 3vh;
 }
 
-#battons {
-  width: auto;
-  height: 60%;
-  vertical-align: middle;
-}
-
-#searechCocteil {
-  height: 100%;
-  width: auto;
-  float: left;
-}
-
-#searechCocteilBatton {
-  height: 100%;
-  width: max-content;
-  float: right;
-}
-
-#allCocteilBatton{
-  width: 11%;
-  height: 100%;
-  margin-left: 1%;
-  float: left;
-}
-
-#popCocteilBatton{
-  height: 100%;
+.leftBatton{
   width: 15%;
-  margin-left: 1%;
+  height: 100%;
+  margin-left: 1vw;
+  float: left;
+  background-color: whitesmoke;
+  border-radius: 5vh;
+  opacity: .7;
+}
+
+.rightBatton{
+  width: 7%;
+  height: 100%;
+  float: right;
+  background-color: whitesmoke;
+  border-radius: 5vh;
+  opacity: .7;
+  margin-right: 1vw;
+}
+
+.rightBatton, .leftBatton:focus{
+  outline: none;
+}
+
+.rightBatton:hover, .leftBatton:hover{
+  opacity: 1;
+}
+
+.searechCocteil {
+  height: 100%;
+  width: 25%;
+  float: left;
+  margin-left: 1vw;
+}
+
+.searechCocteilInput{
+  height: 100%;
+  width: 64%;
+  border: 0;
+  padding: 0;
+  background-color: whitesmoke;
+  border-radius: 5vw;
+  opacity: 0.7;
+  text-align: center;
+  font-family: "Times New Roman";
+  text-overflow: ellipsis;
+  font-size: 2vh;
+  margin-right: 2px;
   float: left;
 }
 
-#registation{
-  width: 14%;
-  height: 100%;
-  float: right;
+.searechCocteilInput:focus {
+  opacity: 1;
+  outline: none;
 }
 
-#logOutDiv{
+.searechCocteilBatton {
   height: 100%;
-  width: max-content;
+  width: 32%;
   float: right;
+  border: 0;
+  border-radius: 5vh;
+  background-color: whitesmoke;
+  opacity: .7;
+}
+
+.searechCocteilBatton:focus{
+  outline: none;
+}
+
+.searechCocteilBatton:hover{
+  opacity: 1;
+}
+
+.CocteilBatton {
+  width: 100%;
+  height: 100%;
+  background-color: #f5f5f5;
+  opacity: .7;
+  border-radius: 5vw;
+  border: 0;
+  cursor: pointer;
+  user-select: none;
+}
+
+.CocteilBatton:focus{
+  outline: none;
+}
+
+.CocteilBatton:hover{
+  opacity: 1;
 }
 
 
+@media screen and (max-width: 1024px) {
+
+  header{
+    position: fixed;
+    z-index: 1;
+  }
+
+  .logo{
+    width: 100vw;
+    color: #2d2d2d;
+    background-color: whitesmoke;
+    text-align: left;
+    padding-left: 13vw;
+  }
+
+  nav{
+    height: auto;
+    top: 6vh;
+    position: fixed;
+    background-color: whitesmoke;
+    z-index: 1;
+  }
+
+  .nav{
+    display: none;
+  }
+
+  .navigationBatton{
+    display: block;
+    height: 6.5vh;
+    width: 12vw;
+    background-color: lightblue;
+    float: left;
+  }
+
+  span{
+    display: block;
+    margin: 1.3vh 0 0 3vw;
+    width: 6vw;
+    height: 0.3vh;
+    margin: 1.3vh 0 0 3vw;
+    background-color: white;
+  }
+
+  .searechCocteil{
+    height: 5vh;
+    width: 100%;
+    float: none;
+    margin: 1vw 0 0 1vw;
+  }
+
+  .searechCocteilInput{
+    width: 72%;
+    border-radius: 0;
+    background-color: white;
+    opacity: 1;
+    font-size: 2.5vh;
+  }
+
+  .searechCocteilBatton{
+    width: 25%;
+    margin-right: 1vh;
+    border-radius: 0;
+    background-color: lawngreen;
+    opacity: 1;
+  }
+
+  .leftBatton, .rightBatton{
+    height: 5vh;
+    width: 98vw;
+    float: none;
+    margin: 0.5vh;
+    background-color: white;
+    border-radius: 0;
+    opacity: 1;
+  }
+
+  .textForBatton{
+    padding: 1.17vh 0;
+  }
+
+  /* header{
+     background-color: whitesmoke;
+     /*position: fixed;
+     z-index: 1;
+   }
+
+  /* nav{
+     display: block;
+     width: 12vw;
+     height: 6vh;
+     position: fixed;
+     background-color: aqua;
+   }
+
+   .logo{
+     color: #2d2d2d;
+   }
+
+   #navigationDiv{
+     display: block;
+     width: 100vw;
+     height: 100vh;
+   }
+
+   .leftBatton, .rightBatton{
+     height: 7vh;
+     width: 100vw;
+     float: none;
+     margin-top: 1vh;
+     margin-left: 0;
+
+   }
+
+   #navigationDiv{
+     width: 100vw;
+     height: 100vh;
+     position: absolute;
+     margin-top: 7vh;
+   }
+
+
+
+   .CocteilBatton{
+     border-radius: 0;
+     border: 1px;
+   }*/
+
+}
+
+/*
 #inputHelp{
   width: 50px;
   height: 30px;
@@ -80,12 +251,7 @@
   float: right;
 }
 
-#addCocteil{
-  height: 100%;
-  width: 15%;
-  margin-left: 1%;
-  float: left;
-}
+
 
 
 h1{
@@ -208,9 +374,5 @@ h1{
   border-color: green;
 }
 
-#favoriteCocteils{
-  height: 100%;
-  width: 15%;
-  margin-left: 1%;
-  float: left;
-}
+
+*/
