--- a/src/app/cocteil-dashboard/cocteil-dashboard.component.css
+++ b/src/app/cocteil-dashboard/cocteil-dashboard.component.css
@@ -1,83 +1,125 @@
-#dashboard{
+figure{
   width: 100%;
   height: 85vh;
-  margin-top: 1vh;
+  margin: 3vh 0 0 0;
 }
 
-#smallView {
-  width: 24vw;
-  height: 37vh;
-  background-color: whitesmoke;
-  float: left;
-  margin-left: 1%;
-  margin-bottom: 1%;
-  opacity: 0.3;
-  cursor: pointer;
-}
-
-#smallView:hover {
-  opacity: 1;
-
-}
-
-#allCocteil{
+.allCocteil{
   width: 76%;
   height: 90%;
   margin-left: 12%;
 }
 
-#smallIcon{
+.smallView {
+  width: 24vw;
+  height: 37vh;
+  background-color: whitesmoke;
+  float: left;
+  margin: 0 0 1vw 1vw;
+  opacity: 0.3;
+  cursor: pointer;
+  border-radius: 1vh;
+}
+
+.smallView:hover {
+  opacity: 1;
+}
+
+img{
   height: 80%;
   width: auto;
-  margin-top: 4%;
-}
-
-#smallViewName{
-  width: auto;
-  height: auto;
-  text-align: center;
-  margin-top: 3%;
-}
-
-p {
-  margin-top: 0;
-  margin-bottom: 0;
-  font-size: 1.3vw;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-
-}
-
-#image{
-  height: 100%;
-  width: auto;
-  margin: 0 auto;
+  margin: 1vh auto;
   display: block;
 }
 
-#navigationDiv{
-  width: 100%;
-  height: 5%;
+figcaption{
+  text-align: center;
+  font-size: 2.5vh;
+  margin-top: 2vh;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
-#battonsDiv{
-  width: 8%;
-  height: 70%;
-  margin: 0 auto;
+.navigationDiv{
+  height: 3%;
 }
 
 .button{
-  width: 1.5vw;
-  height: 2.5vh;
-  background-color: #f5f5f5;
-  float: left;
-  margin-left: 0.4vw;
-  cursor: pointer;
-  text-align: center;
-  opacity: 0.3;
+  height: 100%;
+  width: max-content;
+  margin: 0 auto;
 }
 
-.button:hover{
+p{
+  width: 1.5vw;
+  margin: 0;
+  text-align: center;
+  float: left;
+  margin-right: 1vh;
+  font-size: 1.3vw;
+  font-family: Algerian;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  background-color: whitesmoke;
+  border-radius: 50%;
+  cursor: pointer;
+  user-select: none;
+  opacity: .3;
+}
+
+p:hover{
   opacity: 1;
+}
+
+@media screen and (max-width: 1024px) {
+
+  figure{
+    margin: 0;
+    padding-top: 7vh;
+    height: auto;
+  }
+
+  .allCocteil{
+    width: auto;
+    height: auto;
+    margin-left: 0;
+  }
+
+  .smallView{
+    width: 100vw;
+    height: 93vh;
+    float: none;
+    margin: 0;
+    opacity: 1;
+    position: relative;
+  }
+
+  img{
+    height: auto;
+    width: 80%;
+    padding: 10vw;
+    bottom: 10vh;
+    position: absolute;
+  }
+
+  figcaption{
+    width: 100vw;
+    font-size: 4.5vh;
+    position: absolute;
+    bottom: 10vh;
+  }
+
+  .navigationDiv{
+    height: 16%;
+  }
+
+  p{
+    width: 10.5vw;
+    margin: 4vh;
+    background-color: #add8e6;
+    font-size: 7vw;
+    opacity: 1;
+  }
 }
