--- a/src/app/cocteil-detail/cocteil.component.css
+++ b/src/app/cocteil-detail/cocteil.component.css
@@ -1,20 +1,86 @@
-.nameDiv{
+.nameCocteil{
+  font-size: 4vh;
+  color: whitesmoke;
+  font-family: "Algerian";
+  text-align: center;
+  vertical-align: middle;
+  margin: 0;
+  cursor: default;
+  user-select: none;
+}
+
+main{
+  height: 75%;
+}
+
+figure{
+  height: 100%;
+  width: 34vw;
+  float: left;
+  margin: 0;
+  margin-left: 33vw;
+}
+
+.like {
+  width: 6vh;
+  height: 6vh;
+  background: whitesmoke;
+  border-radius: 50vh;
+  float: right;
+  margin: 1vh 1vh 0 0;
+  cursor: pointer;
+}
+
+.textForLike{
+  font-size: 3vh;
+  margin: 1vh 0 0 0;
+  text-align: center;
+  font-family: "Algerian";
+  color: #2d2d2d;
+  user-select: none;
+}
+
+.comment {
+  display: none;
   width: auto;
-  height: 6%;
-  margin-top: 0%;
+  margin-top: 7vh;
+  float: right;
+  padding: 0.5vh;
+  font-size: 2vh;
+  background-color: whitesmoke;
+  border-radius: 5vh;
 }
 
-#infoOfCocteil{
-  height: 70%;
-  width: 100%;
-  margin-top: 0%;
+.like:hover ~ .comment{
+  display: block;
 }
 
-#historyOutDiv{
+img{
+  width: 20%;
+  image-rendering: pixelated;
+  margin-left: 8%;
+  position: absolute;
+  bottom: 12vh;
+  display: block;
+}
+
+.preporationOutDiv{
   height: 97%;
   width: 30%;
-  margin-top: 0%;
-  margin-left: 68.5%;
+  margin-top: 0;
+  float: left;
+  background: whitesmoke;
+  opacity: 0.7;
+  border-radius: 10px;
+  margin-left: -66vw;
+  padding: 10px;
+}
+
+.historyOutDiv{
+  height: 97%;
+  width: 30%;
+  margin-top: 0;
+  float: right;
   margin-right: 1%;
   background: whitesmoke;
   opacity: 0.7;
@@ -22,61 +88,68 @@
   padding: 10px;
 }
 
-#historyOutDiv:hover{
-  background: white;
-  opacity: 1;
-}
-
-#historyDiv{
+.preporationDiv, .historyDiv{
   width: 100%;
   height: 100%;
   overflow-y: auto;
 }
 
-#imageDiv{
-  height: 100%;
-  width: 37%;
-  float: left;
-}
-
-#preporationOutDiv{
-  height: 97%;
-  width: 30%;
-  margin-top: 0%;
-  float: left;
-  background: whitesmoke;
-  opacity: 0.7;
-  border-radius: 10px;
-  padding: 10px;
-}
-
-#preporationDiv{
-  width: 100%;
-  height: 100%;
-  overflow-y: auto;
-}
-
-#preporationOutDiv:hover{
+.preporationOutDiv:hover, .historyOutDiv:hover{
   background: white;
   opacity: 1;
 }
 
-#imageCocteilDiv{
-  width: 36.5%;
-  height: 55%;
-  text-align: center;
-  position: absolute;
-  bottom: 10%;
+
+@media screen and (max-width: 1024px) {
+
+  header{
+    padding-top: 6vh;
+  }
+
+  .nameCocteil{
+    color: #2d2d2d;
+  }
+
+  main{
+    height: auto;
+  }
+
+  figure{
+    height: 88vh;
+    width: 100vw;
+    float: none;
+    margin: 0;
+  }
+
+  .like{
+    background: #2d2d2d;
+    margin: 1vh 4vh 0 0;
+  }
+
+  .like:hover ~ .comment{
+    display: none;
+  }
+
+  img{
+    width: 60vw;
+    margin: 10vh 0 0 20vw;
+    bottom: 3vh;
+  }
+
+  .preporationOutDiv, .historyOutDiv{
+    height: auto;
+    width: auto;
+    float: none;
+    margin: 1vh;
+    border-radius: 3vh;
+    padding: 1vh;
+    overflow: hidden;
+    opacity: 1;
+  }
+
+  .textForLike{
+    color: whitesmoke;
+  }
+
 }
 
-#image{
-  width: 50%;
-  -ms-interpolation-mode: nearest-neighbor;
-  image-rendering: -webkit-optimize-contrast;
-  image-rendering: -moz-crisp-edges;
-  image-rendering: pixelated;
-  margin-left: 25%;
-  position: absolute;
-  bottom: 0;
-  display: block;
-}
