--- a/src/styles.css
+++ b/src/styles.css
@@ -1,32 +1,58 @@
-/* You can add global styles to this file, and also import other style files */
-body{
-  background: url("images/backgraund.jpg") no-repeat;
-  background-size: cover;
-  background-color: black;
-  overflow: hidden;
+ body{
+   width: 100vw;
+   height: 100vh;
+   margin: 0;
+   background-color: black;
+   background: url("images/backgraund.jpg") no-repeat;
+   background-size: cover;
+   overflow: hidden;
 }
 
-.nameCocteil{
-  font-size: 4vh;
-  color: whitesmoke;
-  font-family: Algerian;
-  text-align: center;
-  vertical-align: middle;
-  margin-bottom: 0;
-  margin-top: 0;
+ .textForCocteil{
+   color:  #2d2d2d;
+   text-align: justify;
+   font-size: 2.5vh;
+   cursor: default;
+   user-select: none;
+ }
+
+ .textForIngredient{
+   color:  #2d2d2d;
+   text-align: center;
+   font-size: 2.5vh;
+   cursor: default;
+   user-select: none;
+ }
+
+ .textForBatton{
+   font-size: 2.3vh;
+   font-family: "Times New Roman";
+   color: #000000;
+   text-align: center;
+   white-space: nowrap;
+   overflow: hidden;
+   text-overflow: ellipsis;
+   margin: 0;
+   padding: 0.17vh 0;
+   opacity: inherit;
+   cursor: pointer;
+   user-select: none;
+ }
+
+
+
+@media screen and (max-width: 1024px) {
+  body {
+    background: none;
+    background-color: whitesmoke;
+    overflow: auto;
+  }
 }
 
-.textForCocteil{
-  color: #000000;
-  text-align: justify;
-  font-size: 2.5vh;
-}
+/*
 
-.textForIngredient{
-  color: #000000;
-  text-align: center;
-  font-size: 2.5vh;
-}
+
+
 
 .textForBatton{
   color: #000000;
@@ -76,11 +102,12 @@ body{
 }
 
 #triangleAdd {
-  width: 40px;
-  height: 40px;
+  width: 2vw;
+  height: 4vh;
   background: saddlebrown;
   display: block;
   border-radius: 7% 7% 50% 50%/60% 60% 40% 40%;
+  margin: 0 auto;
 }
 
 #rectanglVerticale {
@@ -135,19 +162,7 @@ body{
   margin-right: 4%;
 }
 
-.CocteilBatton {
-  width: 100%;
-  height: 100%;
-  background-color: #f5f5f5;
-  opacity: .7;
-  border-radius: 15px;
-  border: 0;
-  cursor: pointer;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
+
 
 .arealForTextBotton{
   width: auto;
@@ -155,31 +170,7 @@ body{
   text-align: center;
 }
 
-.CocteilBatton:focus{
-  outline: none;
-}
 
-.CocteilBatton:hover{
-  opacity: 1;
-}
-
-input {
-  height: 100%;
-  border: 0;
-  padding: 0;
-  background-color: whitesmoke;
-  border-radius: 15px;
-  opacity: 0.7;
-  text-align: center;
-  font-family: "Times New Roman";
-  font-size: 2vh;
-  margin-right: 2px;
-}
-
-input:focus {
-  opacity: 1;
-  outline: none;
-}
 
 .message {
   height: 2.5%;
@@ -201,5 +192,5 @@ input:focus {
 
 input:focus ~ .message {
   display: block;
-}
+}*/
 
