--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,4 @@
-.navigationBatton{
+.navigationButton{
   display: none;
 }
 
@@ -17,7 +17,7 @@ nav{
   height: 3vh;
 }
 
-.leftBatton{
+.leftButton{
   width: 15%;
   height: 100%;
   margin-left: 1vw;
@@ -27,7 +27,7 @@ nav{
   opacity: .7;
 }
 
-.rightBatton{
+.rightButton{
   width: 7%;
   height: 100%;
   float: right;
@@ -37,11 +37,11 @@ nav{
   margin-right: 1vw;
 }
 
-.rightBatton, .leftBatton:focus{
+.rightButton, .leftButton:focus{
   outline: none;
 }
 
-.rightBatton:hover, .leftBatton:hover{
+.rightButton:hover, .leftButton:hover{
   opacity: 1;
 }
 
@@ -52,7 +52,7 @@ nav{
   margin-left: 1vw;
 }
 
-.searechCocteilInput{
+input{
   height: 100%;
   width: 64%;
   border: 0;
@@ -68,12 +68,12 @@ nav{
   float: left;
 }
 
-.searechCocteilInput:focus {
+input:focus {
   opacity: 1;
   outline: none;
 }
 
-.searechCocteilBatton {
+button {
   height: 100%;
   width: 32%;
   float: right;
@@ -83,31 +83,63 @@ nav{
   opacity: .7;
 }
 
-.searechCocteilBatton:focus{
+button:focus{
   outline: none;
 }
 
-.searechCocteilBatton:hover{
+button:hover{
   opacity: 1;
 }
 
-.CocteilBatton {
-  width: 100%;
-  height: 100%;
+h1{
+  text-align: center;
+  font-family: "Times New Roman";
+  font-size: 3vh;
+}
+
+.regInput{
+  height: 8%;
+  float: none;
+  margin: 5% auto;
+  display: block;
+  border-bottom-style: solid;
+  border-width: 1px;
+}
+
+.logButton, .regButton{
+  width: auto;
+  height: 3vh;
+  display: block;
+  opacity: 1;
+  padding: 0 1vw;
+  margin: 2vh auto;
+  float: none;
   background-color: #f5f5f5;
-  opacity: .7;
   border-radius: 5vw;
-  border: 0;
-  cursor: pointer;
+  border-bottom-style: solid;
+  border-width: 1px;
   user-select: none;
+  cursor: pointer;
 }
 
-.CocteilBatton:focus{
-  outline: none;
+.regButton:hover{
+  background-color: deepskyblue;
 }
 
-.CocteilBatton:hover{
-  opacity: 1;
+.logButton:hover{
+  background-color: lawngreen;
+}
+
+.ng-invalid:focus{
+  border-left: 0;
+  border-top-color: darkred;
+  border-right-color: red;
+  border-bottom-color: red;
+}
+
+.ng-valid{
+  border-left: 0;
+  border-color: green;
 }
 
 
@@ -128,7 +160,7 @@ nav{
 
   nav{
     height: auto;
-    top: 6vh;
+    top: 7vh;
     position: fixed;
     background-color: whitesmoke;
     z-index: 1;
@@ -138,7 +170,7 @@ nav{
     display: none;
   }
 
-  .navigationBatton{
+  .navigationButton{
     display: block;
     height: 6.5vh;
     width: 12vw;
@@ -162,7 +194,7 @@ nav{
     margin: 1vw 0 0 1vw;
   }
 
-  .searechCocteilInput{
+  input{
     width: 72%;
     border-radius: 0;
     background-color: white;
@@ -170,7 +202,7 @@ nav{
     font-size: 2.5vh;
   }
 
-  .searechCocteilBatton{
+  button{
     width: 25%;
     margin-right: 1vh;
     border-radius: 0;
@@ -178,7 +210,7 @@ nav{
     opacity: 1;
   }
 
-  .leftBatton, .rightBatton{
+  .leftButton, .rightButton{
     height: 5vh;
     width: 98vw;
     float: none;
@@ -188,191 +220,24 @@ nav{
     opacity: 1;
   }
 
-  .textForBatton{
+  .textForButton{
     padding: 1.17vh 0;
   }
 
-  /* header{
-     background-color: whitesmoke;
-     /*position: fixed;
-     z-index: 1;
-   }
+  .regInput{
+    border-radius: 5vw;
+  }
 
-  /* nav{
-     display: block;
-     width: 12vw;
-     height: 6vh;
-     position: fixed;
-     background-color: aqua;
-   }
+  .logButton, .regButton{
+    height: 5vh;
+  }
 
-   .logo{
-     color: #2d2d2d;
-   }
+  .regButton{
+    background-color: deepskyblue;
+  }
 
-   #navigationDiv{
-     display: block;
-     width: 100vw;
-     height: 100vh;
-   }
-
-   .leftBatton, .rightBatton{
-     height: 7vh;
-     width: 100vw;
-     float: none;
-     margin-top: 1vh;
-     margin-left: 0;
-
-   }
-
-   #navigationDiv{
-     width: 100vw;
-     height: 100vh;
-     position: absolute;
-     margin-top: 7vh;
-   }
-
-
-
-   .CocteilBatton{
-     border-radius: 0;
-     border: 1px;
-   }*/
-
+  .logButton{
+    background-color: lawngreen;
+  }
 }
 
-/*
-#inputHelp{
-  width: 50px;
-  height: 30px;
-  z-index: 100;
-  margin-top: 70px;
-  background: whitesmoke;
-  float: right;
-}
-
-
-
-
-h1{
-  text-align: center;
-  font-family: "Times New Roman";
-  font-size: 3vh;
-}
-
-#inputDiv{
-  width: 100%;
-  height: 80%;
-  margin-top: 5%;
-}
-
-#userNameDiv{
-  width: 100%;
-  height: 20%;
-  text-align: center;
-}
-
-#userPasswordDiv{
-  width: 100%;
-  height: 20%;
-  text-align: center;
-}
-
-#loginDiv{
-  width: 100%;
-  height: 20%;
-  text-align: center;
-}
-
-#registrationDiv{
-  width: 100%;
-  height: 20%;
-  text-align: center;
-}
-
-.userRegistrationInput{
-  margin: 17px;
-  width: 70%;
-  height: 45%;
-  border:2px solid;
-  border-color: whitesmoke;
-  background: whitesmoke;
-  border-radius: 10px;
-  resize: none;
-  font-family: "Times New Roman";
-  font-size: 2vh;
-  text-align: center;
-  float: none;
-  outline: none;
-  padding: 0;
-  line-height: 160%;
-  overflow: hidden;
-}
-
-::-webkit-input-placeholder {
-  font-size: 2vh;
-  text-align: center;
-  vertical-align: middle;
-}
-
-.userRegistrationInput:focus{
-  outline: none;
-  background: white;
-}
-
-.userRegistrationBatton{
-  width: auto;
-  height: 50%;
-  margin: 17px;
-  background-color: whitesmoke;
-  border-radius: 15px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  cursor: pointer;
-}
-
-.userLoginBatton{
-  width: auto;
-  height: 50%;
-  margin: 17px;
-  background-color: whitesmoke;
-  border-radius: 15px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  cursor: pointer;
-}
-
-.userRegistrationBatton:focus{
-  outline: none;
-}
-
-.userLoginBatton:focus{
-  outline: none;
-}
-
-.userRegistrationBatton:hover{
-  background-color: deepskyblue;
-}
-
-.userLoginBatton:hover{
-  background-color: lawngreen;
-}
-
-.ng-invalid:focus{
-  border-left: 0;
-  border-top-color: darkred;
-  border-right-color: red;
-  border-bottom-color: red;
-}
-
-.ng-valid{
-  border-left: 0;
-  border-color: green;
-}
-
-
-*/
