--- a/src/app/cocteilNotFaunded/cocteilNotFaunded.html
+++ b/src/app/cocteilNotFaunded/cocteilNotFaunded.html
@@ -2,6 +2,6 @@
   <h1>Коктель не найден</h1>
 </div>
 
-<div class="cocteilNotFoundBatton" (click)="homePage();">
-  <p class="textForBatton">Вернуться на главную</p>
+<div class="cocteilNotFoundButton" (click)="homePage();">
+  <p class="textForButton">Вернуться на главную</p>
 </div>
