--- a/src/app/favoriteCocteils/favoriteCocteils.css
+++ b/src/app/favoriteCocteils/favoriteCocteils.css
@@ -4,6 +4,95 @@ h1 {
   margin: 0;
 }
 
+figure{
+  width: 100%;
+  height: 85vh;
+  margin: 3vh 0 0 0;
+}
+
+.allCocteil{
+  width: 76%;
+  height: 90%;
+  margin-left: 12%;
+}
+
+.smallView {
+  width: 24vw;
+  height: 37vh;
+  background-color: whitesmoke;
+  float: left;
+  margin: 0 0 1vw 1vw;
+  opacity: 0.3;
+  cursor: pointer;
+  border-radius: 1vh;
+}
+
+.smallView:hover {
+  opacity: 1;
+}
+
+img{
+  height: 80%;
+  width: auto;
+  margin: 1vh auto;
+  display: block;
+}
+
+figcaption{
+  text-align: center;
+  font-size: 2.5vh;
+  margin-top: 2vh;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+
+@media screen and (max-width: 1024px) {
+
+  figure {
+    margin: 0;
+    padding-top: 7vh;
+    height: auto;
+  }
+
+  h1{
+    color: #2d2d2d;
+    padding-top: 20vh;
+  }
+
+  .allCocteil {
+    width: auto;
+    height: auto;
+    margin-left: 0;
+  }
+
+  .smallView {
+    width: 100vw;
+    height: 93vh;
+    float: none;
+    margin: 0;
+    opacity: 1;
+    position: relative;
+  }
+
+  img {
+    height: auto;
+    width: 80%;
+    padding: 10vw;
+    bottom: 10vh;
+    position: absolute;
+  }
+
+  figcaption {
+    width: 100vw;
+    font-size: 4.5vh;
+    position: absolute;
+    bottom: 10vh;
+  }
+}
+
+/*
 #smallView {
   width: 130px;
   height: 120px;
@@ -55,3 +144,4 @@ p {
   width: 100%;
   text-align: center;
 }
+*/
