--- a/src/app/registration/registration.css
+++ b/src/app/registration/registration.css
@@ -5,12 +5,13 @@
   left: 0;
   right: 0;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 999;
+  z-index: 1;
 }
 
 .dialog {
-  z-index: 1000;
+  z-index: 2;
   position: fixed;
+  top: 10vh;
   right: 0;
   left: 0;
   margin-top: 8%;
@@ -23,12 +24,6 @@
   background-color: #fff;
   padding: 12px;
   box-shadow: 0 7px 8px -4px rgba(0, 0, 0, 0.2), 0 13px 19px 2px rgba(0, 0, 0, 0.14), 0 5px 24px 4px rgba(0, 0, 0, 0.12);
-}
-
-@media (min-width: 768px) {
-  .dialog {
-    top: 40px;
-  }
 }
 
 .dialog__close-btn {
