--- a/src/app/addCocteil/addCocteil.css
+++ b/src/app/addCocteil/addCocteil.css
@@ -1,6 +1,88 @@
+header{
+  height: 4vh;
+  margin-top: 1vh;
+
+}
+
+main{
+  height: 75vh;
+}
+
+.inputNewCocteil{
+  height: 3vh;
+  width: 17vw;
+  float: none;
+  margin: 0 auto;
+  display: block;
+}
+
+.newPreporation{
+  height: 92%;
+  width: 30%;
+  margin-left: 1vw;
+  float: left;
+  background: whitesmoke;
+  opacity: 0.7;
+  border-radius: 1vw;
+  padding: 1vw;
+}
+
+.preporation{
+  height: 30%;
+}
+
+.newHistory{
+  height: 92%;
+  width: 30%;
+  margin-right: 1vw;
+  background: #f5f5f5;
+  opacity: .7;
+  border-radius: 1vw;
+  padding: 1vw;
+  float: right;
+}
+
+.newPreporation:hover, .newHistory:hover {
+  opacity: 1;
+}
+
+textarea{
+  width: 100%;
+  height: 100%;
+  border: 2px solid;
+  border-color: whitesmoke;
+  background: whitesmoke;
+  border-radius: 10px;
+  resize: none;
+  font-family: "Times New Roman";
+  font-size: 2vh;
+  text-align: center;
+  float: right;
+  line-height: 160%;
+}
+
+textarea:focus{
+  outline: none;
+  background: white;
+}
+
+
+.ng-invalid:focus{
+  border-left: 0;
+  border-top-color: darkred;
+  border-right-color: red;
+  border-bottom-color: red;
+}
+
+.ng-valid{
+  border-left: 0;
+  border-color: green;
+}
+
+/*
 #table{
   width: auto;
-  height: 100vh;
+
 }
 
 hr {
@@ -191,33 +273,11 @@ hr {
   text-align: center;
 }
 
-.ng-invalid:focus{
-  border-left: 0;
-  border-top-color: darkred;
-  border-right-color: red;
-  border-bottom-color: red;
-}
 
-.ng-valid{
-  border-left: 0;
-  border-color: green;
-}
 
-#message {
-  height: 3vh;
-  width: 100%;
-}
 
-#messageText {
-  width: auto;
-  height: auto;
-  background-color: black;
-  color: white;
-  text-align: center;
-  font-size: 2.5vh;
-  margin: 0;
-}
 
 textarea{
   border: 2px;
 }
+*/
