--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -52,27 +52,6 @@ nav{
   margin-left: 1vw;
 }
 
-input{
-  height: 100%;
-  width: 64%;
-  border: 0;
-  padding: 0;
-  background-color: whitesmoke;
-  border-radius: 5vw;
-  opacity: 0.7;
-  text-align: center;
-  font-family: "Times New Roman";
-  text-overflow: ellipsis;
-  font-size: 2vh;
-  margin-right: 2px;
-  float: left;
-}
-
-input:focus {
-  opacity: 1;
-  outline: none;
-}
-
 button {
   height: 100%;
   width: 32%;
@@ -176,6 +155,10 @@ h1{
     width: 12vw;
     background-color: lightblue;
     float: left;
+  }
+
+  .addCocteilBatton{
+    display: none;
   }
 
   span{
