--- a/src/styles.css
+++ b/src/styles.css
@@ -39,7 +39,38 @@
    user-select: none;
  }
 
+ .messageText {
+   width: 80vw;
+   height: auto;
+   background-color: black;
+   color: #fff;
+   text-align: center;
+   font-size: 2.5vh;
+   margin: 1vh auto;
+   border-radius: 5vh;
+   border: 2px solid red;
+ }
 
+ input{
+   height: 100%;
+   width: 64%;
+   border: 0;
+   padding: 0;
+   background-color: whitesmoke;
+   border-radius: 5vw;
+   opacity: 0.7;
+   text-align: center;
+   font-family: "Times New Roman";
+   text-overflow: ellipsis;
+   font-size: 2vh;
+   margin-right: 2px;
+   float: left;
+ }
+
+ input:focus {
+   opacity: 1;
+   outline: none;
+ }
 
 @media screen and (max-width: 1024px) {
   body {
